--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -6,7 +6,14 @@
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
     </head>
     <body>
+	<h1>ESAPI</h1>
         @helper.form(action=routes.Application.index()){
+        <input type='text' name='whatever' />
+        <input type='submit' name='submit' value='Submit' />
+        }
+	
+	<h1>Raw</h1>
+        @helper.form(action=routes.Application.index2()){
         <input type='text' name='whatever' />
         <input type='submit' name='submit' value='Submit' />
         }
