add open redirect

--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -14,6 +14,12 @@
 
     <div class="container">
 
+        <h1>Redirect</h1>
+
+        <div class="row">
+            Please click this <a href="/redir/?url=/">dumb redirect link</a>.
+        </div>
+
         <h1>Reflect</h1>
 
         <div class="row">
