--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -17,7 +17,9 @@
         <h1>Redirect</h1>
 
         <div class="row">
-            Please click this <a href="/redir?url=/">dumb redirect link</a>.
+            <div class="col-md-8">
+                Please click this <a href="/redir?url=/">dumb redirect link</a>.
+            </div>
         </div>
 
         <h1>Reflect</h1>
